Opened 8 years ago
Closed 8 years ago
#13605 closed bug (fixed)
Fix bug with highlighting current system date in BCalendarView.
Reported by: | akshay | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | - General | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Bugs:
- Changing the year in Calendar View does not remove the highlighting from previous highlighted day.
- Changing the system date to a date in a different month(different from the month currently set in calendar view) does not remove the highlighting from currently highlighted day.
- The disabled day number text belonging to the next month (month after the one currently selected) gets wrongly highlighted while attempting to highlight the day number text belonging to the current month.
Fixed the mentioned bugs.
Attachments (1)
Change History (3)
by , 8 years ago
Attachment: | 0001-Fix-bug-with-highlighting-current-system-date-in-BCa.patch added |
---|
comment:1 by , 8 years ago
patch: | 0 → 1 |
---|
comment:2 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Applied in hrev51284.